<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_home_icon"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_home"/> 
    <item
        android:id="@+id/action_account"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_account_icon"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_account"
         android:visible="true"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_bar_search"
        android:visible="false"/>
  	<item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_stat_navigation_refresh"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:visible="false"/>
     <item
        android:id="@+id/action_sort_by"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:icon="@drawable/ic_action_sortby_icon"
        android:orderInCategory="5"
        android:showAsAction="always"
         android:visible="false"
        android:title="@string/action_sort_by">
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/action_sort_by_categ"
                android:orderInCategory="1"
                android:title="@string/action_sort_by_categ"/>
            <item
                android:id="@+id/action_sort_by_lang"
                android:orderInCategory="2"
                android:title="@string/action_sort_by_lang"/>
            <item
                android:id="@+id/action_sort_by_default"
                android:orderInCategory="3"
                android:title="@string/action_sort_by_default"/>
        </menu>
    </item>
     <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="6"
        android:showAsAction="always"
        android:title="@string/action_logout"
        android:visible="true"/>
</menu>