<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/img_bg_reg_forum"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/a_reg_fp_dialog_tv_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/reg_forget_pwd"
        android:textColor="#5A5A5A"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/a_nk_chk_headerLineLayout"
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/a_nk_chk_ll"
        android:layout_marginTop="6dip"
        android:background="@color/orange"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/a_reg_fp_dialog_tv_fp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/reg_forget_pwd_prompt_txt"
        android:textColor="#5A5A5A"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/a_reg_fp_dialog_et_login_email_id"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:background="@drawable/img_et_reg"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/a_reg_fp_dialog_btn_cancel"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_cancel" />

        <Button
            android:id="@+id/a_reg_fp_dialog_btn_submit"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_submit" />
    </LinearLayout>

</LinearLayout>